--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-task-users-card",
+  "name": "we-follower",
   "version": "0.1.0",
   "homepage": "https://MakhunArtom.github.io/testTask-usersCard",
   "private": true,
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.0.0",
     "web-vitals": "^2.1.4"
